Cross Namespace/echo-store-ns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: store-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: store-ns
spec:
  ports:
    - port: 9080
      targetPort: 80
      protocol: TCP
  selector:
    app: echoserver
